<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_design"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="224dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/room_1"
            android:scaleType="fitXY"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="24dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|right"
            style="@style/TextStyle"
            android:text="@string/more"
            android:id="@+id/tvMoreOne"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="30sp"
            android:textStyle="bold"
            style="@style/TextStyle.Heading"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/room_2"
            android:scaleType="fitXY"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="24dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|right"
            style="@style/TextStyle"
            android:text="@string/more"
            android:id="@+id/tvMoreTwo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="30sp"
            android:textStyle="bold"
            style="@style/TextStyle.Heading"
            />
    </android.support.v7.widget.CardView>

</LinearLayout>