<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Comment"
            android:text="Date : 30/05/2017 | Time : 20:54 PM"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:id="@+id/tv_detail_time"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <ImageView
                    android:id="@+id/img_detail_lamp_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/lightbulb_off" />

                <ImageView
                    android:id="@+id/img_detail_lamp_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/lightbulb_on"
                    />
                <ImageView
                    android:id="@+id/img_detail_lamp_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/lightbulb_off"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp"
                            style="@style/TextStyle.Heading"
                            />

                        <TextView
                            android:id="@+id/tv_detail_temp"
                            style="@style/TextStyle.Heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="30"
                            android:textColor="@color/red_dark"
                            android:textSize="18sp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp_max"
                            style="@style/TextStyle.Heading"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="30"
                            style="@style/TextStyle.Heading"
                            android:textSize="18sp"
                            android:textColor="@color/red_dark"
                            android:id="@+id/tv_detail_temp_max"
                            />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humid"
                            style="@style/TextStyle.Heading"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="30"
                            style="@style/TextStyle.Heading"
                            android:textSize="18sp"
                            android:textColor="@color/red_dark"
                            android:id="@+id/tv_detail_humid"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humid_max"
                            style="@style/TextStyle.Heading"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="30"
                            style="@style/TextStyle.Heading"
                            android:textSize="18sp"
                            android:textColor="@color/red_dark"
                            android:id="@+id/tv_detail_humid_max"
                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <VideoView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_black_dark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/prev"
                android:id="@+id/img_detail_prev"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/next"
                android:id="@+id/img_detail_next"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>